--- a/index.html
+++ b/index.html
@@ -53,12 +53,21 @@
       );
       $('.thumbnail').click(function() {
         $('#main img').attr('src', $(this).attr('src'));
+        currentNum = $(this).index();
       });
-      // 追加したい領域prevの挙動を設定
+      
       $('#prev').click(function() {
         currentNum--;
         if (currentNum < 0) {
           currentNum = files.length -1;
+        }
+        $('#main img').attr('src', files[currentNum]);
+      });
+      // 追加したい領域nextの挙動を設定
+      $('#next').click(function() {
+        currentNum++;
+        if (currentNum > files.length - 1) {
+          currentNum = 0;
         }
         $('#main img').attr('src', files[currentNum]);
       });
