自動再生機能実装。再生(autoPlay)/停止(clearTimeout)設定&ボタン設置

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
   <div id="nav">
     <button id="prev">&laquo; 前へ</button>
     <button id="next">次へ &raquo;</button>
+    <button id="play">再生</button>
+    <button id="stop">停止</button>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -48,7 +50,8 @@
         'fish4.jpg'
       ];
       var img;
-
+      // タイマー用の変数を設定
+      var timer;
       var currentNum = 0;
       for (var i = 0; i < files.length; i++) {
         img = $('<img>').attr('src', files[i]).addClass('thumbnail');
@@ -83,6 +86,19 @@
         $('#main img').attr('src', files[currentNum]);
         $('.thumbnail').removeClass('current')
         $('.thumbnail').eq(currentNum).addClass('current');
+      });
+
+      function autoPlay() {
+        $('#next').click();
+        timer = setTimeout(function() {
+          autoPlay();
+        }, 1000);　　　　　// 左記に再生スピードを記載
+      }
+      $('#play').click(function() {
+        autoPlay();
+      });
+      $('#stop').click(function() {
+        clearTimeout(timer);
       });
     });
   </script>
